--- a/static/booking3.css
+++ b/static/booking3.css
@@ -39,12 +39,20 @@ body {
     border-right: 1px solid #ddd;
 }
 
+h1 {
+    color: #a60102;
+    margin: 20px 0 20px 0;
+    font-size: 30px;
+    font-weight: bold;
+}
+
 h2 {
     color: #a60102;
-    margin-bottom: 20px;
+    margin: 20px 0 20px 0;
     font-size: 24px;
     font-weight: bold;
 }
+
 
 /* Form layout */
 form {
@@ -63,6 +71,14 @@ label {
     display: flex;
     flex-direction: column;
     gap: 10px;
+    padding: 20px 0px 20px 0;
+
+}
+.price-info{
+    padding: 20px 20px 20px 0;
+    font-size: 30px; /* Kích thước chữ lớn */
+    color: #a60102; /* Màu chữ */
+    font-weight: bold;
 }
 
 .checkbox-group label {
@@ -70,6 +86,23 @@ label {
     align-items: center;
     font-size: 16px;
 }
+
+
+label {
+    display: block;
+    margin-bottom: 5px; /* Tạo khoảng cách nhỏ giữa label và input */
+    font-weight: bold;
+}
+
+input[type="text"] {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 20px; /* Tạo khoảng cách rộng hơn giữa các input */
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+}
+
 
 .checkbox-group input[type="checkbox"] {
     margin-right: 10px;
@@ -105,13 +138,21 @@ button {
     color: green; 
     font-size: 30px;
 }
+.display-to, .display-from{
+    padding: 100px 0 100px 0;  
+}
 
-#price-display{
-    padding: 20px 20px 20px 0;  
-    font-size: 30px; /* Kích thước chữ cho giá */
-    color: #a60102; /* Màu cho số tiền */
+.info-location {
+    padding: 10px 0 10px 0;
+    font-size: 100%; /* Kích thước chữ lớn */
+}
+.info-box {
+    padding: 20px 20px 20px 0;
+    font-size: 30px; /* Kích thước chữ lớn */
+    color: #a60102; /* Màu chữ */
     font-weight: bold;
 }
+
 
 button:hover {
     background-color: darkred;
